# EO

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
cmake/: FindSDL2.cmake
res/: CameraViewShader.frag  CameraViewShader.vert  MatViewShader.frag  MatViewShader.vert  resources.conf
src/: App.cpp  BallMan.cpp  BallMan.h  BallManShader.h  BallTracker.cpp  BallTracker.h  Body.h  CameraView.cpp  CameraView.h  CameraViewShader.cpp  CameraViewShader.h  FlyCaptureCamera.cpp  FlyCaptureCamera.h  Label.cpp  Label.h  Leg.cpp  Leg.h  Line.cpp  Line.h  LineShader.h  MagnumUtils.h  MatView.cpp  MatView.h  MatViewShader.h  configure.h.cmake  utils.h
src/audio/: Sound.cpp  Sound.h
src/capture/: AbstractCapture.cpp  AbstractCapture.h  FlyCaptureCamera.cpp  FlyCaptureCamera.h  SimulationCapture.cpp  SimulationCapture.h
src/tracking/: BallDetector.cpp  BallDetector.h  BallFollower.cpp  BallFollower.h  BallTracker.cpp  BallTracker.h
src/view/: BallMenController.cpp  BallMenController.h  Label.cpp  Label.h  MatView.cpp  MatView.h  MatViewShader.cpp  MatViewShader.h
src/view/ballman/: BallMan.cpp  BallMan.h  Body.h  Contours.h  Face.cpp  Face.h  Leg.cpp  Leg.h  Line.cpp  Line.h
src/view/fx/: Clap.cpp  Clap.h
src/view/primitives/: Arc.h  Circle.h  Line.cpp  Line.h  LineShader.h
